// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommentHead Component Testing: Should render even with UNDEFINED passed props data. 1`] = `
<div
  className="comment-head"
  id="comment-head-undefined-undefined"
>
  <div
    className="comment-body"
  >
    <Te />
  </div>
</div>
`;

exports[`CommentHead Component Testing: Should render with passed props data. 1`] = `
<div
  className="comment-head"
  id="comment-head-r/worldnews-1-2"
>
  <div
    className="comment-body"
  >
    <Te>
      this is a test for comment's body
    </Te>
  </div>
</div>
`;
